# tecla

./: .gitlab-ci.yml  NEWS  README.md  meson.build  tecla.doap
data/: meson.build  org.gnome.Tecla.desktop.in
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  ie.po  it.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+15 more)
src/: main.c  meson.build  pc105.h  tecla-application.c  tecla-application.h  tecla-key.c  tecla-key.css  tecla-key.h  tecla-keymap-observer.c  tecla-keymap-observer.h  tecla-layout.h  tecla-model.c  tecla-model.h  tecla-util.c  tecla-util.h  tecla-view.c  tecla-view.h  tecla-view.ui  tecla-window.ui  tecla.gresource.xml
